# iriebook

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  minimax.md  opencode.json  run.sh  testui.sh  update_icons.sh
docs/: conventional-commits-cheatsheet.md  e2e_plan.md
iriebook/: Cargo.toml  README.md  test_debug.md
iriebook-tauri-ui/: E2E_TESTING.md  README.md  iriebook_update.key.pub  package-lock.json  package.json  run_e2e_with_ui.sh  tsconfig.json  vitest.config.ts
iriebook-tauri-ui/scripts/: E2E_FRAMEWORK.md  FRAMEWORK_SUMMARY.md  e2e-diff-test.js  e2e-framework.js  e2e-google-auth-test.js  fake-google-docs-api.js  fake-oauth-server.js
iriebook-tauri-ui/src/: App.css  App.tsx  bindings.ts  main.tsx
iriebook-tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
iriebook-tauri-ui/src-tauri/icons/: icon.icns
iriebook-tauri-ui/src-tauri/src/: books.rs  cloud.rs  diff.rs  git.rs  infrastructure.rs  lib.rs  main.rs  state.rs  updater.rs
iriebook-tauri-ui/src/bindings/: AddBookResult.ts  AppAction.ts  BookInfo.ts  BookMetadata.ts  BookPath.ts  ChangeBookResult.ts  CoverImageData.ts  DeviceFlowInfo.ts  FolderPath.ts  GitAuthStatus.ts  GitCommit.ts  GitSyncStatus.ts  LogEntryPayload.ts  LogEntryType.ts  ProcessingEvent.ts  ProcessingProgress.ts  PublishEnabled.ts  SessionData.ts  UiState.ts  WordStatsEnabled.ts
iriebook-tauri-ui/src/components/: AboutDialog.tsx  AddBookButton.tsx  AnalysisResultsPanel.tsx  BookItem.tsx  BookList.tsx  BookViewer.tsx  ConfirmDialog.tsx  CoverImage.tsx  DiffViewer.tsx  ErrorBoundary.tsx  GitHistoryPanel.tsx  GitSyncPanel.test.tsx  GitSyncPanel.tsx  GoogleAuthPanel.test.tsx  GoogleAuthPanel.tsx  GoogleDocPickerDialog.tsx  GoogleDocsSyncButton.tsx  LinkGoogleDocDialog.tsx  MenuBar.tsx  MetadataDisplay.tsx  MetadataEditor.tsx  ProcessingPanel.tsx  StatusBar.tsx  SyncSelectedButton.tsx
iriebook-tauri-ui/src/components/analysis/: BookListForAnalysis.tsx  StatisticsCards.tsx  WordFrequencyChart.tsx  WordTable.tsx
iriebook-tauri-ui/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  label.tsx  scroll-area.tsx  sonner.tsx  switch.tsx
iriebook-tauri-ui/src/contexts/: AppContext.test.tsx  AppContext.tsx  actions.ts
iriebook-tauri-ui/src/hooks/: coverCache.ts  useActionTarget.ts  useCoverImage.test.tsx  useCoverImage.tsx  useGitOperations.ts  useProcessingEvents.test.tsx  useProcessingEvents.tsx  useSession.test.tsx  useSession.tsx
iriebook-tauri-ui/src/i18n/: config.ts  types.ts
iriebook-tauri-ui/src/i18n/locales/en/: analysis.json  books.json  common.json  dialogs.json  diff.json  errors.json  git.json  google.json  index.ts  log.json  menu.json  metadata.json  processing.json  toasts.json
iriebook-tauri-ui/src/lib/: utils.ts
iriebook-tauri-ui/src/test/: setup.ts
iriebook-test-support/: Cargo.toml
iriebook-test-support/src/: fixtures.rs  lib.rs  mocks.rs
iriebook-test-support/src/mocks/: git_access.rs  google_docs_access.rs  publication_access.rs
iriebook-ui-common/: Cargo.toml  package-lock.json
iriebook-ui-common/src/: actions.rs  analysis_cache.rs  app_state.rs  batch_google_docs_sync.rs  batch_processing.rs  book_satellites.rs  book_scanner.rs  book_viewing.rs  collection_management.rs  default_paths.rs  diff_commands.rs  git_operations.rs  git_state.rs  google_auth_operations.rs  google_docs_operations.rs  image_loading.rs  lib.rs  metadata_utils.rs  processing.rs  session.rs  ui_state.rs
iriebook-ui-common/src/managers/: book_ui.rs  cover_loading_engine.rs  mod.rs
iriebook/assets/: default.css
iriebook/docs/: nom_parser_guide.md  volatility-based-design.md
iriebook/src/: client.rs  engines.rs  lib.rs  main.rs  resource_access.rs  utilities.rs
iriebook/src/client/: cli.rs
iriebook/src/engines/: traits.rs
iriebook/src/engines/analysis/: word_analyzer.rs
iriebook/src/engines/comparison/: differ.rs  mod.rs
iriebook/src/engines/text_processing/: markdown_transform.rs  quote_fixer.rs  whitespace_trimmer.rs  word_replacement.rs
iriebook/src/engines/validation/: validator.rs
iriebook/src/managers/: diff_manager.rs  ebook_publication.rs  google_docs_sync.rs  mod.rs  repository_manager.rs
iriebook/src/resource_access/: archive.rs  calibre.rs  command.rs  config.rs  credential_storage.rs  diff_source.rs  embedded_config.rs  file.rs  git.rs  github_auth.rs  google_auth.rs  google_docs.rs  pandoc.rs  series_metadata.rs  traits.rs
iriebook/src/utilities/: diff_trimmer.rs  error.rs  types.rs
iriebook/tests/: e2e_tests.rs  integration_tests.rs  workflow_tests.rs
iriebook/tests/e2e/: fixtures.rs  mocks.rs  mod.rs  workflows.rs
iriebook/tests/e2e/mocks/: git_access.rs  google_docs_access.rs  publication_access.rs
iriebook/tests/e2e/workflows/: diff_workflow.rs  git_sync_workflow.rs  google_docs_workflow.rs  publication_workflow.rs
iriebook/tests/fixtures/: simple-fixed.md  simple.md
iriebook/tests/workflows/: mod.rs  workflows.rs
iriebook/tests/workflows/workflows/: diff_workflow.rs  git_sync_workflow.rs  google_docs_workflow.rs  publication_workflow.rs
scripts/: prepare-update.sh
src/: bindings.ts
