[package]
name = "iriebook-ui-common"
version = "0.1.0"
edition = "2024"
authors = ["seshonaar"]
description = "Framework-agnostic UI common utilities for IrieBook"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
iriebook = { path = "../iriebook" }
tokio = { workspace = true }  # For async batch processing

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Filesystem utilities
walkdir = "2.5"       # book_scanner.rs
dirs = "5.0"          # session.rs

# Image processing
image = "0.25"        # image_loading.rs
base64 = "0.22"       # image_loading.rs

# TypeScript bindings via specta + tauri-specta
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.14"     # For tests in book_scanner, session, image_loading
tokio = { workspace = true }  # For async tests in batch_processing
async-trait = "0.1"   # For mocking async traits in tests
