[package]
name = "iriebook"
version = "0.1.0"
edition = "2024"
authors = ["seshonaar"]
description = "IrieBook - Ebook publication pipeline for wife's vampire novels"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
dirs = "6.0.0"
regex = "1.12.2"
nom = "7.1"
zip = "7.0.0"
image = "0.25"
similar = { version = "2.6", features = ["text"] }
ts-rs = { version = "11.1.0", features = ["serde-compat"] }  # Will be removed after migration
specta = { version = "=2.0.0-rc.22", features = ["derive"] }

# Git operations
gix = { version = "0.77", features = ["blocking-http-transport-curl", "progress-tree", "serde", "status", "parallel", "tree-editor"] }
gix-credentials = "0.34.1"
urlencoding = "2.1"
url = "2.5"

# GitHub API for device flow
reqwest = { version = "0.12", features = ["json", "charset", "multipart"] }

# OS keyring for token storage
keyring = { version = "3.6", features = ["sync-secret-service", "crypto-rust"] }
base64 = "0.22.1"
async-trait = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
proptest = "1.6"
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"
iriebook-ui-common = { path = "../iriebook-ui-common" }

