[package]
name = "iriebook-tauri-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
e2e-mocks = ["dep:iriebook-test-support", "iriebook/e2e-mocks", "iriebook-ui-common/e2e-mocks"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iriebook_tauri_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 1
debug = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
iriebook = { path = "../../iriebook" }
iriebook-ui-common = { path = "../../iriebook-ui-common" }
base64 = "0.22.1"
open = "5.3"

# TypeScript bindings via specta
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "=0.0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = "6.0"
iriebook-test-support = { path = "../../iriebook-test-support", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
